deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: antivax
  annotations:
    linkerd.io/inject: enabled
  labels:
    antivax: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antivax
  namespace: antivax
spec:
  replicas: 2
  selector:
    matchLabels:
      app: antivax
  template:
    metadata:
      labels:
        app: antivax
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/jadolg/antivax:latest
          name: antivax
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: tls
              mountPath: "/etc/admission-webhook/tls"
          livenessProbe:
            httpGet:
              port: 8443
              path: /health
              scheme: HTTPS
      volumes:
        - name: tls
          secret:
            secretName: antivax-tls
---
apiVersion: v1
kind: Service
metadata:
  name: antivax
  namespace: antivax
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: antivax
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: antivax
  labels:
    app: antivax
  annotations:
    cert-manager.io/inject-ca-from: antivax/antivax-tls
webhooks:
  - name: antivax-cronjob.antivax.svc.cluster.local
    failurePolicy: Fail
    clientConfig:
      service:
        name: antivax
        namespace: antivax
        path: "/mutate-cronjob"
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["cronjobs"]
    namespaceSelector:
      matchLabels:
        antivax: enabled
    admissionReviewVersions:
      - v1
    sideEffects: None
  - name: antivax-job.antivax.svc.cluster.local
    failurePolicy: Fail
    clientConfig:
      service:
        name: antivax
        namespace: antivax
        path: "/mutate-job"
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "batch" ]
        apiVersions: [ "v1" ]
        resources: [ "jobs" ]
    namespaceSelector:
      matchLabels:
        antivax: enabled
    admissionReviewVersions:
      - v1
    sideEffects: None
